# babysit

./: .gitignore  AGENTS.md  DESIGN.md  README.md  pyproject.toml
babysit/: __init__.py  app.py  asgi.py  baidu.py  config.py  db.py  refresh_media.py  utils.py
babysit/templates/: index.html
frontend/: index.html  package-lock.json  package.json  vite.config.js
frontend/src/: App.vue  main.js
frontend/src/assets/: main.css
frontend/src/components/: AllPhotosModal.vue  AuthGuard.vue  BabyModal.vue  DayPhotosModal.vue  GrowthModal.vue  GrowthSection.vue  Header.vue  Heatmap.vue  MilestoneEditor.vue  MilestoneTimeline.vue  MonthSelector.vue  PhotoSection.vue  PhotoViewer.vue  QuickActions.vue  RecordDetailModal.vue  RecordModal.vue  SlideContent.vue  SummaryCards.vue
frontend/src/router/: index.js
frontend/src/stores/: app.js  modal.js
frontend/src/views/: HomeView.vue  MilestoneManageView.vue  PhotoDirectView.vue
tests/: test_all_updates.py  test_app.py  test_basic.py  test_complete.py  test_e2e.py  test_e2e_browser.py  test_evidence.py  test_final_fixes.py  test_fixes.py  test_growth_chart_click.py  test_heatmap_scroll.py  test_january_photos.py  test_new_features.py  test_photo_dates.py  test_photo_dates_fixed.py  test_photo_exif.py  test_photo_viewer.py  test_refresh_media.py  test_timeline.py  test_url_format.py  test_url_simple.py  verify_all.py
