[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "babysit"
version = "1.0.0"
description = "基于百度网盘的轻量级宝宝相册"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.9"
authors = [
    {name = "User"},
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
dependencies = [
    "bypy>=1.8.9",
    "flask>=3.0.0",
    "requests>=2.31.0",
]

[project.optional-dependencies]
dev = [
    "gunicorn>=21.0.0",
]

[project.urls]
Homepage = "https://github.com/user/babysit"

[tool.hatch.build.targets.wheel]
packages = ["babysit"]

[tool.hatch.build.force-include]
"babysit/templates" = "babysit/templates"
