[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "babysit"
version = "2.0.0"
description = "宝宝成长管家 - One Page App"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.9"
dependencies = [
    "bypy>=1.8.9",
    "flask>=3.0.0",
    "requests>=2.31.0",
    "pillow>=10.0.0",
    "pillow-heif>=0.15.0",
    "asgiref>=3.7.0",
    "gunicorn>=21.0.0",
]

[tool.hatch.build.targets.wheel]
packages = ["babysit"]

[tool.hatch.build.force-include]
"babysit/templates" = "babysit/templates"
"babysit/data" = "babysit/data"
